c2prj1_cards/grade.txt
Grading at Tue Jun 16 08:44:11 UTC 2020
Compiling cards.c
cards.c: In function ‘card_from_letters’:
cards.c:112:17: error: expected expression before ‘suit_t’
     temp.suit = suit_t SPADES;
                 ^
cards.c:115:17: error: expected expression before ‘suit_t’
     temp.suit = suit_t HEARTS;
                 ^
cards.c:118:17: error: expected expression before ‘suit_t’
     temp.suit = suit_t DIAMONDS;
                 ^
cards.c:121:17: error: expected expression before ‘suit_t’
     temp.suit = suit_t CLUBS;
                 ^
cards.c:107:10: error: unused variable ‘suit’ [-Werror=unused-variable]
   suit_t suit;
          ^
cc1: all warnings being treated as errors
Could not compile your card.c!

Overall Grade: FAILED
